Fix overflow auto

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -16,7 +16,7 @@
   align-items: initial;
   justify-content: flex-start;
   flex-direction: column;
-  overflow: scroll;
+  overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
 .NavigationBar{
